upgrading part 2